# just-say

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  PRD.md  README.md  SECURITY.md  TODO.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  implementation_plan.md  package.json  pnpm-lock.yaml  task.md  tsconfig.web.tsbuildinfo  walkthrough.md
.agent/rules/: rules.md
.ai-docs/: PRD.md  implementation_plan.md  task.md  walkthrough.md
.github/workflows/: ci.yml
design/: design.pen
docs/: groq-meeting-transcription.md  groq-non-final-token-plan.md  meeting-benchmark.md  ui-ux-redesign-brief.md  ws-realtime-transcription-flow.md  ws-transcription-code-review.md
python/: asr_engine.py  audio_utils.py  generate-icons.py  pyproject.toml  run_whisper_server.ps1  run_whisper_server.sh  test_whisper_server_streaming.py  text_processing.py  transcript_assembler.py  whisper_server.py  whisper_service.py  ws_streaming.py
resources/: icon.icns
src/main/: config.test.ts  config.ts  hotkey.test.ts  hotkey.ts  index.ts  meeting-transcription.test.ts  meeting-transcription.ts  secureStore.test.ts  secureStore.ts  tray.ts
src/main/ai/: meeting-ai-service.test.ts  meeting-ai-service.ts
src/preload/: index.d.ts  index.ts
src/renderer/: app-prototype-light.html  app-prototype.html  audio-capture.html  index.html  indicator-pill.html  indicator.html  meeting.html  output.html
src/shared/: backend-capabilities.ts  hotkey.ts  transcription-types.ts
tools/: meeting-bench.mjs  meeting-bench.ref.example.json
(+106 files in other folders)
